[gd_scene load_steps=35 format=3 uid="uid://7n7r0qabl4kf"]

[ext_resource type="Script" path="res://Scripts/turret_4.gd" id="1_2lj55"]
[ext_resource type="Texture2D" uid="uid://dwme4pkeepye3" path="res://Sprites/Tower_Samurai_Idle-Sheet.png" id="1_fpx28"]
[ext_resource type="Texture2D" uid="uid://bicp2lf8gqeay" path="res://Sprites/Tower_Samurai_Attack-Sheet.png" id="2_3mabk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqwyq"]
radius = 55.0364

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa4xn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3x65"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rc2on"]
atlas = ExtResource("2_3mabk")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsalk"]
atlas = ExtResource("2_3mabk")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chakw"]
atlas = ExtResource("2_3mabk")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc2da"]
atlas = ExtResource("2_3mabk")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1jd5"]
atlas = ExtResource("2_3mabk")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3k1u"]
atlas = ExtResource("2_3mabk")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ln2"]
atlas = ExtResource("2_3mabk")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4frp"]
atlas = ExtResource("2_3mabk")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj7vt"]
atlas = ExtResource("2_3mabk")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxe71"]
atlas = ExtResource("2_3mabk")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l23yj"]
atlas = ExtResource("2_3mabk")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b045y"]
atlas = ExtResource("1_fpx28")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb3yx"]
atlas = ExtResource("1_fpx28")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0xsm"]
atlas = ExtResource("1_fpx28")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4813g"]
atlas = ExtResource("1_fpx28")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq7dl"]
atlas = ExtResource("1_fpx28")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io4ay"]
atlas = ExtResource("1_fpx28")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6m30"]
atlas = ExtResource("1_fpx28")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v3n1"]
atlas = ExtResource("1_fpx28")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eouc7"]
atlas = ExtResource("1_fpx28")
region = Rect2(512, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g7g6"]
atlas = ExtResource("1_fpx28")
region = Rect2(576, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cksc"]
atlas = ExtResource("1_fpx28")
region = Rect2(640, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubyn3"]
atlas = ExtResource("1_fpx28")
region = Rect2(704, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pkf1"]
atlas = ExtResource("1_fpx28")
region = Rect2(768, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2liea"]
atlas = ExtResource("1_fpx28")
region = Rect2(832, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26bea"]
atlas = ExtResource("1_fpx28")
region = Rect2(896, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfim5"]
atlas = ExtResource("1_fpx28")
region = Rect2(960, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkxoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc2on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsalk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chakw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc2da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1jd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3k1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ln2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4frp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj7vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxe71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l23yj")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b045y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb3yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0xsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4813g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq7dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io4ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6m30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v3n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eouc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g7g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cksc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubyn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pkf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2liea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26bea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfim5")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[node name="turret_4" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_2lj55")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vqwyq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oa4xn")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_q3x65")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -1)
sprite_frames = SubResource("SpriteFrames_kkxoy")
animation = &"attack"

[node name="StunTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
offset_left = -77.0
offset_top = -128.0
offset_right = 123.0
offset_bottom = 22.0
scale = Vector2(0.8, 0.8)
current_tab = 0

[node name="PATH1" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PATH1"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 104.0

[node name="Buttons" type="HBoxContainer" parent="TabContainer/PATH1/VBoxContainer"]
layout_mode = 2

[node name="LVL1" type="Button" parent="TabContainer/PATH1/VBoxContainer/Buttons"]
layout_mode = 2
text = "LVL1"

[node name="LVL2" type="Button" parent="TabContainer/PATH1/VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "LVL2"

[node name="LVL3" type="Button" parent="TabContainer/PATH1/VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "LVL3"

[node name="INFO" type="RichTextLabel" parent="TabContainer/PATH1/VBoxContainer"]
layout_mode = 2
text = "This is info about the upgrade.
COST: 100MP"
fit_content = true

[node name="PATH2" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PATH2"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 104.0

[node name="Buttons" type="HBoxContainer" parent="TabContainer/PATH2/VBoxContainer"]
layout_mode = 2

[node name="LVL1" type="Button" parent="TabContainer/PATH2/VBoxContainer/Buttons"]
layout_mode = 2
text = "LVL1"

[node name="LVL2" type="Button" parent="TabContainer/PATH2/VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "LVL2"

[node name="LVL3" type="Button" parent="TabContainer/PATH2/VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "LVL3"

[node name="INFO" type="RichTextLabel" parent="TabContainer/PATH2/VBoxContainer"]
layout_mode = 2
text = "This is info about the upgrade.
COST: 100MP"
fit_content = true

[node name="Instakill" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL1" to="." method="_on_lvl_1_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL1" to="." method="_on_lvl_1_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL2" to="." method="_on_lvl_2_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL2" to="." method="_on_lvl_2_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL3" to="." method="_on_lvl_3_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH1/VBoxContainer/Buttons/LVL3" to="." method="_on_lvl_3_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL1" to="." method="_on_lvl_1_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL1" to="." method="_on_lvl_1_pressed" binds= ["PATH2"]]
[connection signal="mouse_entered" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL2" to="." method="_on_lvl_2_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL2" to="." method="_on_lvl_2_pressed" binds= ["PATH2"]]
[connection signal="mouse_entered" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL3" to="." method="_on_lvl_3_mouse_entered"]
[connection signal="pressed" from="TabContainer/PATH2/VBoxContainer/Buttons/LVL3" to="." method="_on_lvl_3_pressed" binds= ["PATH2"]]
[connection signal="timeout" from="Instakill" to="." method="_on_instakill_timeout"]
